fix center align

--- a/_assets/css/app.css
+++ b/_assets/css/app.css
@@ -63,9 +63,12 @@ iframe {
 .post-content .gist,
 .post-content .twitter-tweet,
 .post-content .instagram-media,
-.post-content .fb_iframe_widget {
-  margin-left: auto;
-  margin-right: auto;
+.post-content .fb-post,
+.post-content .fb-post span,
+.post-content .fb-post iframe {
+  margin-left: auto !important;
+  margin-right: auto !important;
+  display: block !important;
 }
 
 html {
